# another-social-media-app

./: .gitignore  ADVANCED_EDITOR_PLAN.md  ARCHITECTURE_DIAGRAM.md  AWS_DEPLOYMENT.md  CI_CD_SETUP.md  DEPLOYMENT.md  Dockerfile  FIXES_APPLIED.md  INTEGRATION_GUIDE.md  MOBILE_UI_IMPROVEMENTS.md  MULTI_CLIP_RENDERING.md  MULTI_LAYER_TIMELINE_READY.md  PHASE_2_COMPLETE.md  PLAYBACK_ENGINE_FIXED.md  PRODUCTION_FFMPEG_INSTALL.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SERVER_SIDE_RENDERING.md  SERVER_SIDE_RENDERING_COMPLETE.md  STEP_BY_STEP_DEPLOY.md  TEXT_RENDERING_FIXED.md  UPLOAD_AND_TRIM_IMPROVEMENTS.md  VIDEO_AUDIO_TRACKS.md  VIDEO_EDITOR_COMPLETE.md  VIDEO_EDITOR_FIXES.md  VIDEO_EDITOR_IMPLEMENTATION.md  VIDEO_EDITOR_QUICK_START.md  VIDEO_EDITOR_TEST_GUIDE.md  VIDEO_RENDERING_FIXED.md  deploy.sh  docker-compose.yml  ecs-task-definition.json
backend/: .env  .env.example  ADMIN_SETUP.md  Cargo.toml  Dockerfile  Dockerfile.prod  PRODUCTION_UPDATE_README.md  create_user.sql  install_ffmpeg.sh  production_missing_tables.sql  production_schema_update.sql  run_migrations.sh
backend/.cargo/: config.toml
backend/.sqlx/: query-084e185f2b13ffdf8073d9eeaa4a5f4ca3e213b081e280f49cc5e6b29e00af05.json  query-08b6e9a40be4f1440dc802b253548204f25d09032d8feeeed917032b0e117ba7.json  query-09a373f50732d3b4e976c9435c12997ac52033c1cf14cbe8996faa298abd961e.json  query-09bb3f2a3462008b4320ccdc1d8172289b806815d4989fd2d47394b327c12ff6.json  query-0bb0fec9d98e48e9cdbe73d0a7f4b77adfc9bcd3226e2974532e254508f0563b.json  (+138 more)
backend/migrations/: 000_initial_schema.sql  001_messaging_schema.sql  (+13 more)
(+91 files in other folders)
