[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
argon2 = { version = "0.5", features = ["password-hash"] }
jsonwebtoken = "9"
rand_core = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
futures = "0.3"
base64 = "0.21"
image = "0.24"
tower = "0.4"
dashmap = "5.5"
